<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/article"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:drawSelectorOnTop="true"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/articleTitle"
        style="@style/AppTheme.Article.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Article title" />

    <ImageView
        android:id="@+id/iv_feed_icon"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_rss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/articleTitle" />

    <TextView
        android:id="@+id/feedTitle"
        style="@style/AppTheme.Article.Rss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_feed_icon"
        app:layout_constraintStart_toEndOf="@id/iv_feed_icon"
        app:layout_constraintTop_toTopOf="@id/iv_feed_icon"
        tools:text="@string/sample_rss_title" />

    <TextView
        android:id="@+id/tv_articleUrl"
        style="@style/AppTheme.Article.Url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_feed_icon"
        tools:text="@string/sample_article_url" />

    <TextView
        android:id="@+id/articlePostedTime"
        style="@style/AppTheme.Article.Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/articleTitle"
        app:layout_constraintTop_toBottomOf="@id/tv_articleUrl"
        tools:text="2019/01/01 12:00:00" />

    <ImageView
        android:id="@+id/hatenaIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/hatena"
        android:src="@drawable/hatena"
        app:layout_constraintBottom_toBottomOf="@id/articlePostedTime"
        app:layout_constraintStart_toEndOf="@id/articlePostedTime"
        app:layout_constraintTop_toTopOf="@id/articlePostedTime" />

    <TextView
        android:id="@+id/articlePoint"
        style="@style/AppTheme.Article.Point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@id/articlePostedTime"
        app:layout_constraintStart_toEndOf="@id/hatenaIcon"
        app:layout_constraintTop_toTopOf="@id/articlePostedTime"
        tools:text="100" />

    <ImageView
        android:id="@+id/favoriteOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        android:src="@drawable/ic_favorite_on"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/articlePostedTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/articlePostedTime" />

    <ImageView
        android:id="@+id/favoriteOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        android:src="@drawable/ic_favorite_off"
        app:layout_constraintBottom_toBottomOf="@id/articlePostedTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/articlePostedTime" />

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/articlePostedTime" />
</androidx.constraintlayout.widget.ConstraintLayout>