<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.phicdy.mycuration.curatedarticlelist.CuratedArticleRecyclerView
        android:id="@+id/rv_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/emptyViewArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_article"
        android:visibility="gone" />
</FrameLayout>