<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_article_top_activity"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search_article"/>

 	<item
        android:id="@+id/setting_top_activity"
        android:orderInCategory="3"
        android:icon="@drawable/ic_settings"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/setting"/>
</menu>
