...
    
    <string name="all_read">全て既読にする</string>
    <string name="no_article">未読の記事がありません</string>
    
    <string name="icon">アイコン</string>
    
    <string name="search_article">記事を検索</string>
    <string name="open_all_articles">全ての記事を開く</string>
    <string name="next_page">次のページ</string>
    
    <string name="hatena">はてな</string>
    
    <string name="share">共有</string>
...
